# smm_automated

./: .env.sample  .gitignore  pyproject.toml
src/: config.py  main.py
src/core/: enums.py
src/core/insta_client/: __init__.py  client.py
src/core/scripts/: leave_comments.py
src/logger/: __init__.py
