[tool.poetry]
name = "insta"
version = "0.1.0"
description = ""
authors = ["Oleksandr <olukianets@lytvynov-production.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
instagrapi = "^2.1.3"
pillow = "^11.0.0"
pydantic-settings = "^2.7.0"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
